--- a/_projects_others/1-whistle_and_fruits.html
+++ b/_projects_others/1-whistle_and_fruits.html
@@ -1,5 +1,5 @@
 ---
-layout: project
+layout: normal
 name: Whistle & Fruits
 thumbnail: web-1.png
 subtitle: an always fresh fruits shop - EC site
@@ -8,20 +8,10 @@ short_description: Too tired to go to the store to buy heavy fruits like waterme
 
 <div class="container">
     <h1 class="text-center">Whistle & Fruits</h1>
-    <p class="row">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
     standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
     a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
     remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
     Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
     Lorem Ipsum.</p>
-    <a class="btn btn-primary" href="#" role="button">Visit link</a>
-</div>
-
-<div class="container">
-  <div class="text-center">
-    <img src="/assets/pics/detail_project/project-web-1.1.png" alt="">
-  </div>
-  <div class="text-center">
-    <img src="/assets/pics/detail_project/project-web-1.2.png" alt="">
-  </div>
 </div>
