--- a/_projects_web/1-whistle-fruits.html
+++ b/_projects_web/1-whistle-fruits.html
@@ -1,9 +1,11 @@
 ---
 layout: project
 name: Whistle & Fruits
+permalink: /projects/whistle-and-fruits/
 thumbnail: web-1.png
 subtitle: an always fresh fruits shop - EC site
 short_description: Too tired to go to the store to buy heavy fruits like watermelon or pine apple ? Visit us on Whistle & Fruits. We provide a devoted service with 100% fresh and organic guaranteed fruits to your table. Make an order now with our discounts !!
+
 ---
 
 <div class="container">
