--- a/_projects_web/4-ambient_vibes.html
+++ b/_projects_web/4-ambient_vibes.html
@@ -1,6 +1,7 @@
 ---
-layout: normal
+layout: project
 name: Ambient Vibe
+permalink: /projects/ambient-vibes/
 thumbnail: web-4.png
 subtitle: aroma diffuser shop - Adobe Xd design
 short_description: One of the best known uses for essential oils is their ability to assist you in unwinding after a tough day.  Oils such as chamomile, lavender and clary sage in a diffuser can give you a much needed break from the stress of the day and help you sleep.
