--- a/_projects_web/5-museyl.html
+++ b/_projects_web/5-museyl.html
@@ -1,6 +1,7 @@
 ---
-layout: normal
+layout: project
 name: Museyl
+permalink: /projects/museyl/
 thumbnail: web-5.png
 subtitle: Travel tour booking site
 short_description: Located in the heart of Tokyo, HARAJUKU. Unlike others coffee shop with colorful theme and loud music, here in Cafe・ド・リシャス we bring you peaceful
