--- a/_projects_web/3-your_little_plant.html
+++ b/_projects_web/3-your_little_plant.html
@@ -1,6 +1,7 @@
 ---
-layout: normal
+layout: project
 name: Your Little Plant
+permalink: /projects/your-little-plant/
 thumbnail: web-3.png
 subtitle: an eco-friendly plant shop - EC site
 short_description: Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant
