Add contents + pics to more detail projects

--- a/_projects_web/2-cafe.html
+++ b/_projects_web/2-cafe.html
@@ -6,5 +6,28 @@ thumbnail: web-2.png
 subtitle: a peaceful coffee store in Tokyo - homepage
 short_description: Located in the heart of Tokyo, HARAJUKU. Unlike others coffee shop with colorful theme and loud music, here in Cafe・ド・リシャス we bring you peaceful mood with relaxing sensations. <br>It’s peace in a cup !!
 ---
+<div class="description container">
+    <h1 class="text-center">Cafe・ド・リシャス</h1>
+    <div class="my-3 col-lg-8 mx-auto">
+      <p>Located in the heart of Tokyo - Harajuku, unlike others coffee shop with colorful theme and loud music, here in Cafe・ド・リシャス we bring you peaceful mood with relaxing sensations. It’s peace in a cup !!</p>
+      <p>Cafe・ド・リシャス homepage has primary color as brown, like the color of fresh brewed coffee or cappuchino. </p>
+      <p><strong>In used of :</strong> Photoshop, Illustrator, Adobe Xd, After Effects, Procreate, Html, Css</p>
+    </div>
+    <div class="text-center">
+      <a class="btn btn-primary px-4 py-2" target="_blank" href="https://nguyenxtung.com/cafedorishasu/" role="button">Visit link</a>
+    </div>
+</div>
 
-TODO
+<div class="img container">
+  <div class="row">
+    <div class="text-center">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-web-2.1.png" alt="">
+    </div>
+    <div class="text-center">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-web-2.2.png" alt="">
+    </div>
+    <div class="text-center">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-web-2.3.png" alt="">
+    </div>
+  </div>
+</div>
