--- a/_projects_web/3-your_little_plant.html
+++ b/_projects_web/3-your_little_plant.html
@@ -1,10 +1,29 @@
 ---
 layout: project
-name: Your Little Plant
+name: YourLittlePlant
 permalink: /projects/your-little-plant/
 thumbnail: web-3.png
 subtitle: an eco-friendly plant shop - EC site
 short_description: Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant
 ---
 
-TODO
+<div class="description container">
+    <h1 class="text-center">YourLittlePlant</h1>
+    <div class="my-3 col-lg-8 mx-auto">
+      <p>an eco-friendly plant shop - EC site</p>
+      <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
+      <p>In this project, I only focus on animation and lay-outs. Webflow is a very powerful tool to study and design responsive websites without html, css & javascript.</p>
+      <p><strong>In used of :</strong> Webflow, Photoshop</p>
+    </div>
+    <div class="text-center">
+      <a class="btn btn-primary px-4 py-2" target="_blank" href="https://nguyenxtung.com/whistleandfruits/" role="button">Visit link</a>
+    </div>
+</div>
+
+<div class="img container">
+  <div class="row">
+    <div class="text-center">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-web-3.1.png" alt="">
+    </div>
+  </div>
+</div>
