--- a/_projects_web/4-ambient_vibes.html
+++ b/_projects_web/4-ambient_vibes.html
@@ -1,10 +1,25 @@
 ---
 layout: project
-name: Ambient Vibe
+name: Ambient Vibes
 permalink: /projects/ambient-vibes/
 thumbnail: web-4.png
 subtitle: aroma diffuser shop - Adobe Xd design
 short_description: One of the best known uses for essential oils is their ability to assist you in unwinding after a tough day.  Oils such as chamomile, lavender and clary sage in a diffuser can give you a much needed break from the stress of the day and help you sleep.
 ---
 
-TODO
+<div class="description container">
+    <h1 class="text-center">Ambient Vibes</h1>
+    <div class="my-3 col-lg-8 mx-auto">
+      <p>aroma diffuser shop - Adobe Xd design</p>
+      <p>One of the best known uses for essential oils is their ability to assist you in unwinding after a tough day.  Oils such as chamomile, lavender and clary sage in a diffuser can give you a much needed break from the stress of the day and help you sleep.</p>
+      <p><strong>In used of :</strong> Adobe Xd</p>
+    </div>
+</div>
+
+<div class="img container">
+  <div class="row">
+    <div class="text-center">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-web-4.1.png" alt="">
+    </div>
+  </div>
+</div>
