add contents for Advertising sites

--- a/_projects_ads/1-dongdu_talk.html
+++ b/_projects_ads/1-dongdu_talk.html
@@ -14,7 +14,7 @@ short_description: I'm in charge of designing Logo, T-shirt and event poster. I 
       <p>TalkDongDu is a non-profit organization held by former Dong Du Japanese School students. Their goal is to support their kohai in Japan in many ways as possible. I feel so lucky to work with them to bring their ideas and honest actions to life.</p>
       <p><strong>In used of :</strong> Photoshop, Illustrator, Adobe Xd, Procreate, Html, Css, Javascript</p>
       <p>
-        <a target="_blank" href="https://www.facebook.com/talkdongdu">Visit their Facebook Page</a>
+        <a class="sm-link" target="_blank" href="https://www.facebook.com/talkdongdu">Visit their Facebook Page</a>
       </p>
     </div>
 </div>
