--- a/_projects_ads/2-suntory_orange_juice.html
+++ b/_projects_ads/2-suntory_orange_juice.html
@@ -3,26 +3,25 @@ layout: project
 name: Suntory orange juice ads for magazine
 permalink: /projects/suntory-orange-juice/
 thumbnail: ads-2.png
-subtitle: a non-profit organization in Japan
-short_description: I'm in charge of designing Logo, T-shirt and event poster. I feel so lucky to work with them to bring their ideas and honest actions to life.
+subtitle: Ads in magazine design
+short_description: An advertising concept for Suntory's famous transparent drink.
 ---
 
 <div class="description container">
-    <h1 class="text-center">Dongdu dasdaow</h1>
+    <h1 class="text-center">Suntory orange juice ads for magazine</h1>
     <div class="my-3 col-lg-8 mx-auto">
-      <p>a non-profit organization in Japan</p>
-      <p>TalkDongDu is a non-profit organization held by former Dong Du Japanese School students. Their goal is to support their kohai in Japan in many ways as possible. I feel so lucky to work with them to bring their ideas and honest actions to life.</p>
-      <p><strong>In used of :</strong> Photoshop, Illustrator, Adobe Xd, Procreate, Html, Css, Javascript</p>
-      <p>
-        <a target="_blank" href="https://www.facebook.com/talkdongdu">Visit their Facebook Page</a>
-      </p>
+      <p>an advertising concept for Suntory's famous transparent drink.</p>
+      <p><strong>In used of :</strong> Photoshop, Illustrator</p>
     </div>
 </div>
 
 <div class="img container">
   <div class="row">
     <div class="text-center">
-      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-1.1.png" alt="">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-2.1.png" alt="">
+    </div>
+    <div class="text-center">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-2.2.png" alt="">
     </div>
   </div>
 </div>
