--- a/_projects_ads/3-zespri_kiwi.html
+++ b/_projects_ads/3-zespri_kiwi.html
@@ -1,28 +1,24 @@
 ---
 layout: project
-name: Dongdu Talk show
-permalink: /projects/dongdu-talk-show/
-thumbnail: ads-1.png
-subtitle: a non-profit organization in Japan
-short_description: I'm in charge of designing Logo, T-shirt and event poster. I feel so lucky to work with them to bring their ideas and honest actions to life.
+name: Zespri brochure design
+permalink: /projects/zespri-kiwi/
+thumbnail: ads-3.png
+subtitle: brochure design
+short_description: I want to deliver the freshness and delicous taste of the fruit to customer with my camera works. I shoot these pictures, retouch them with Photoshop and design lay-out with contents in Illustrator.
 ---
 
 <div class="description container">
-    <h1 class="text-center">Dongdu Talk show</h1>
+    <h1 class="text-center">Zespri green kiwi</h1>
     <div class="my-3 col-lg-8 mx-auto">
-      <p>a non-profit organization in Japan</p>
-      <p>TalkDongDu is a non-profit organization held by former Dong Du Japanese School students. Their goal is to support their kohai in Japan in many ways as possible. I feel so lucky to work with them to bring their ideas and honest actions to life.</p>
-      <p><strong>In used of :</strong> Photoshop, Illustrator, Adobe Xd, Procreate, Html, Css, Javascript</p>
-      <p>
-        <a target="_blank" href="https://www.facebook.com/talkdongdu">Visit their Facebook Page</a>
-      </p>
+      <p>brochure design</p>
+      <p>To promote Zespri’s famous green kiwi, I made this brochure using Illustrator, Photoshop. I want to deliver the freshness and delicous taste of the fruit to customer with my camera works. I shoot these pictures, retouch them with Photoshop and design lay-out with contents in Illustrator.</p>
     </div>
 </div>
 
 <div class="img container">
   <div class="row">
     <div class="text-center">
-      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-1.1.png" alt="">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-3.1.png" alt="">
     </div>
   </div>
 </div>
