--- a/_projects_ads/4-web_advertising_banners.html
+++ b/_projects_ads/4-web_advertising_banners.html
@@ -2,7 +2,7 @@
 layout: project
 name: Web advertising banners
 permalink: /projects/web-advertising-banners/
-thumbnail: ads-2.png
+thumbnail: ads-4.png
 subtitle: ads banner series
 short_description: To promote for Tokyo Design Academy - Web Design departure, I created these banners to increase interaction and draw attention to young people who likes designing and computer application.
 ---
@@ -12,17 +12,14 @@ short_description: To promote for Tokyo Design Academy - Web Design departure, I
     <div class="my-3 col-lg-8 mx-auto">
       <p>ads banner series</p>
       <p>To promote for Tokyo Design Academy - Web Design departure, I created these banners to increase interaction and draw attention to young people who likes designing and computer application.</p>
-      <p><strong>In used of :</strong> Photoshop, Illustrator, Adobe Xd, Procreate, Html, Css, Javascript</p>
-      <p>
-        <a target="_blank" href="https://www.facebook.com/talkdongdu">Visit their Facebook Page</a>
-      </p>
+      <p><strong>In used of :</strong> Photoshop, Illustrator</p>
     </div>
 </div>
 
 <div class="img container">
   <div class="row">
     <div class="text-center">
-      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-1.1.png" alt="">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-4.1.png" alt="">
     </div>
   </div>
 </div>
