--- a/_projects_ads/5-lumine_sp.html
+++ b/_projects_ads/5-lumine_sp.html
@@ -1,28 +1,28 @@
 ---
 layout: project
-name: Dongdu Talk show
-permalink: /projects/dongdu-talk-show/
-thumbnail: ads-1.png
-subtitle: a non-profit organization in Japan
-short_description: I'm in charge of designing Logo, T-shirt and event poster. I feel so lucky to work with them to bring their ideas and honest actions to life.
+name: Lumine sale promotion campaign
+permalink: /projects/lumine-sp/
+thumbnail: ads-7.png
+subtitle: chain shoppping mall sale promotion campaign
+short_description: LUMINE is the leading developer of high-end service shopping centers in the Tokyo area. This project made to promote their Summer Sale Campaign with targeted customers of ladies in their 30s ~ 45s.
 ---
 
 <div class="description container">
-    <h1 class="text-center">Dongdu Talk show</h1>
+    <h1 class="text-center">Lumine sale promotion campaign</h1>
     <div class="my-3 col-lg-8 mx-auto">
-      <p>a non-profit organization in Japan</p>
-      <p>TalkDongDu is a non-profit organization held by former Dong Du Japanese School students. Their goal is to support their kohai in Japan in many ways as possible. I feel so lucky to work with them to bring their ideas and honest actions to life.</p>
-      <p><strong>In used of :</strong> Photoshop, Illustrator, Adobe Xd, Procreate, Html, Css, Javascript</p>
-      <p>
-        <a target="_blank" href="https://www.facebook.com/talkdongdu">Visit their Facebook Page</a>
-      </p>
+      <p>chain shoppping mall sale promotion plan</p>
+      <p>LUMINE is the leading developer of high-end service shopping centers in the Tokyo area. LUMINE has become a recognized throughout Japan as a symbol of solidity and creativity, of quality, and of consistency in business. This project made to promote their Summer Sale Campaign with targeted customers of ladies in their 30s ~ 45s.</p>
+      <p><strong>In used of :</strong> Photoshop, Illustrator</p>
     </div>
 </div>
 
 <div class="img container">
   <div class="row">
     <div class="text-center">
-      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-1.1.png" alt="">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-5.1.png" alt="">
+    </div>
+    <div class="text-center">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-5.2.png" alt="">
     </div>
   </div>
 </div>
