--- a/_projects_ads/6-ianak_sp.html
+++ b/_projects_ads/6-ianak_sp.html
@@ -1,20 +1,20 @@
 ---
 layout: project
-name: Dongdu Talk show
-permalink: /projects/dongdu-talk-show/
-thumbnail: ads-1.png
-subtitle: a non-profit organization in Japan
-short_description: I'm in charge of designing Logo, T-shirt and event poster. I feel so lucky to work with them to bring their ideas and honest actions to life.
+name: Bakery store Ianak! sale promotion plan
+permalink: /projects/ianak-sp/
+thumbnail: ads-6.png
+subtitle: a famous local bakery store in Nishi Nippori
+short_description: Ianak! has made their way to people's heart in Nishi Nippori with their famous croissant. This SP plan is desgined to make their brand improve with new point of sales material. Such as staff's working shirt & unique paper bag.
 ---
 
 <div class="description container">
-    <h1 class="text-center">Dongdu Talk show</h1>
+    <h1 class="text-center">Bakery store Ianak! sale promotion plan</h1>
     <div class="my-3 col-lg-8 mx-auto">
-      <p>a non-profit organization in Japan</p>
-      <p>TalkDongDu is a non-profit organization held by former Dong Du Japanese School students. Their goal is to support their kohai in Japan in many ways as possible. I feel so lucky to work with them to bring their ideas and honest actions to life.</p>
-      <p><strong>In used of :</strong> Photoshop, Illustrator, Adobe Xd, Procreate, Html, Css, Javascript</p>
+      <p>a famous local bakery store in Nishi Nippori</p>
+      <p>Ianak! has made their way to people's heart in Nishi Nippori with their famous croissant. This SP plan is desgined to make their brand improve with new point of sales material. Such as staff's working shirt & unique paper bag.</p>
+      <p><strong>In used of :</strong> Photoshop, Illustrator</p>
       <p>
-        <a target="_blank" href="https://www.facebook.com/talkdongdu">Visit their Facebook Page</a>
+        <a class="sm-link" target="_blank" href="http://www.ianak.com/">Visit Ianak! homepage</a>
       </p>
     </div>
 </div>
@@ -22,7 +22,16 @@ short_description: I'm in charge of designing Logo, T-shirt and event poster. I 
 <div class="img container">
   <div class="row">
     <div class="text-center">
-      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-1.1.png" alt="">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-6.1.png" alt="">
+    </div>
+    <div class="text-center">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-6.2.png" alt="">
+    </div>
+    <div class="text-center">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-6.3.png" alt="">
+    </div>
+    <div class="text-center">
+      <img class="img-fluid" src="/assets/pics/detail_project/project-ads-6.4.png" alt="">
     </div>
   </div>
 </div>
