--- a/_projects_others/5-illustrations.html
+++ b/_projects_others/5-illustrations.html
@@ -4,20 +4,23 @@ name: My illustrations
 permalink: /projects/museyl/
 thumbnail: o-5.png
 subtitle: just drawing my mind
-short_description: I like to draw in my free time, here is some of my works.
+short_description: I like to draw in my free time, so here is some of my works.
 ---
 
 <div class="description container">
     <h1 class="text-center">My illustrations</h1>
     <div class="my-3 col-lg-8 mx-auto">
-      <p>I like to draw in my free time, here is some of my works.</p>
+      <p>I like to draw in my free time, so here is some of my works.</p>
       <p><strong>In used of :</strong> Procreate, Photoshop, Illustrator</p>
     </div>
 </div>
 
 <div class="img container">
+  <div class="text-center">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/6ld07LzAguI?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
   <div class="row">
-    <div style="margin-bottom: 30px" class="text-center">
+    <div class="text-center">
       <img class="img-fluid" src="/assets/pics/detail_project/project-o-5.1.png" alt="">
     </div>
     <div class="text-center">
